--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@ethersproject/hash": "^5.7.0",
     "@noble/curves": "^1.1.0",
+    "@privy-io/react-auth": "1.47.2",
+    "@privy-io/wagmi-connector": "^0.1.6",
     "@safe-global/safe-core-sdk-types": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +14,8 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "@wagmi/chains": "^1.8.0",
+    "@zerodev/privy": "^1.2.5",
     "assert": "^2.0.0",
     "axios": "^1.4.0",
     "browserify-zlib": "^0.2.0",
@@ -32,11 +36,9 @@
     "stream-http": "^3.2.0",
     "typescript": "^4.9.5",
     "url": "^0.11.1",
-    "web-vitals": "^2.1.4",
-    "@wagmi/chains": "^1.8.0",
-    "@zerodev/privy": "^1.2.5",
-    "@privy-io/react-auth": "1.47.2",
-    "@privy-io/wagmi-connector": "^0.1.6"
+    "viem": "^1.5.3",
+    "viem-15": "npm:viem@1.5.3",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.2"
